# FedProto

./: .gitignore  GEMINI.md  pyproject.toml
experiments/: federated_main.py  run_femnist_comparison.py
exps/: federated_main.py
lib/: femnist.py  options.py  pre_train.py  sampling.py  update.py  utils.py  visualize.py
lib/models/: models.py  resnet.py
scripts/: run.sh
src/fedproto/: femnist.py  options.py  pre_train.py  sampling.py  utils.py
src/fedproto/models/: __init__.py  resnet.py
