[project]
name = "fedproto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0,<2.4.0",
    "pylint>=4.0.4",
    "snakeviz>=2.2.2",
    "tensorboardx>=2.6.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["tensorboard>=2.20.0"]

[tool.uv.sources]
fedproto = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedproto"]
